Add server at Madrid
Add a server at Madrid for prediction

--- a/PhoneGap/index.html
+++ b/PhoneGap/index.html
@@ -132,7 +132,7 @@ Input size of array: <input type="textfield" id="size"/> <button id="init" oncli
         <option value="192.168.101.31">Sri</option>
         <option value="193.1.13.14">Athlone</option>
         <option value="193.1.201.26">Waterford</option>
-        <option value="141.20.103.211">Berlin</option>
+        <option value="138.4.0.120">Madrid</option>
         <option value="203.159.63.249">Bangkok</option>
         <option value="141.20.103.211">Sydney</option>
     </select><br><br>
